--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -10,9 +10,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-14 00:32+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,6 +36,10 @@ msgstr "Bewerk uw pagina"
 msgid "Tell Friends"
 msgstr "Mond-tot-mondreclame"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL voor deze pagina"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Contactinformatie bijwerken"
@@ -49,8 +53,8 @@ msgid "Approval required"
 msgstr "Goedkeuring vereist"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Supporter profiel"
+msgid "Owner Email Notification"
+msgstr "Eigenaar e-mail notificatie"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -70,15 +74,15 @@ msgstr "'Maak persoonlijke campagnepagina' link tekst"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "Deze aanmelding is gedaan dankzij de inspanningen van <strong>%1</strong>, die onze campagne ondersteunt."
+msgstr "Deze aanmelding is gedaan dankzij de inzet van <strong>%1</strong> die onze campagne steunt. "
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "Deze bijdrage is gedaan dankzij de inspanningen van <strong>%1</strong>, die onze campagne ondersteunt."
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr "Deze bijdrage is gedaan dankzij de inzet van <strong>%1</strong> die onze campagne steunt. "
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -154,6 +158,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Het profiel voor supporters is niet beschikbaar voor deze persoonlijke campagnepagina. Neem contact op met de beheerder van deze site als u hulp nodig heeft."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "Het inlichten van de eigenaar is voor deze persoonlijke campagnepagina niet ingesteld. Neem contact op met uw beheerder als u ondersteuning nodig heeft."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Persoonlijke campagnepagina ID"
@@ -173,11 +183,11 @@ msgstr "Inleiding"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Page Text"
-msgstr "Pagina tekst"
+msgstr "Paginatekst"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Donate Link Text"
-msgstr "Donatie link tekst"
+msgstr "Tekst donatielink"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Page Type"
@@ -186,6 +196,10 @@ msgstr "PCP pagina type"
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity Type"
 msgstr "Target Entiteit Type"
+
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Eigenaar notificatie"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
@@ -202,6 +216,10 @@ msgstr "Start een persoonlijke campagnepagina - stap 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Bewerk uw persoonlijke campagnepagina"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -236,26 +254,16 @@ msgid "Honor Roll"
 msgstr "Overzicht donateurs"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Stuur mij een e-mail wanneer iemand op mijn pagina een bijdrage doet."
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Streefbedrag dan 0 te zijn."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Tekst op knop mag niet meer dan 64 karakters zijn."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Uw foto of plaatje mag niet groter zijn dan 360 x 360 pixels in omvang."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "De afmeting van het plaatje dat u heeft geselecteerd is %1 x %2. "
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Maak het bestand kleiner of zoek een kleiner plaatje en probeer het nog eens."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -361,10 +369,6 @@ msgstr "Pagina ingeschakeld"
 msgid "Source Type"
 msgstr "Bron-type"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Evenementen pagina"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -439,6 +443,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Verstuur e-mails om uw vrienden uit te nodigen uw campagne te steunen!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Kopieer deze link om het direct op uw eigen website te delen!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Bewerk uw contact informatie"
 
@@ -478,9 +486,15 @@ msgstr "De tekst voor de donatie-knop of de aanmeldingsknop."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Als deze optie actief is, verschijnt er een overzicht met namen (of aliassen) van de mensen die uw campagne steunen. (Mensen krijgen ook de keuze om anoniem te blijven. Hun namen worden niet getoond.)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Als deze optie is aangevinkt, dan wordt de \"eerrol\" getoond met de namen (of roepnamen) van de mensen die je ondersteunen. (Een donor heeft de optie om anoniem te blijven.)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Als deze optie aangevinkt is, ontvangt u per e-mail een berichtje als mensen een bijdrage doen aan uw campagne."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -490,10 +504,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Als persoonlijke campagnepagina's zijn geactiveerd, zal uw achterban nadat zij gedoneerd hebben, een link zien waarmee zij uitgenodigd worden hun eigen fondsenwervingspagina te starten. Donaties die binnen komen via een persoonlijke campagnepagina worden vastgelegd als \"verdienste\" van de eigenaar van die campagnepagina. "
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr "Goedkeuring"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -624,7 +634,7 @@ msgstr "Dit scherm toont alle persoonlijke campagnepagina's die zijn aangemaakt.
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Page Title"
-msgstr "Pagina titel"
+msgstr "Paginatitel"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Contribution Page / Event"
@@ -632,7 +642,7 @@ msgstr "Donatie pagina / evenement"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "View page"
-msgstr "Toon pagina"
+msgstr "Pagina tonen"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "There are no Personal Campaign Pages which match your search criteria."
@@ -729,6 +739,38 @@ msgstr "Toon pagina"
 msgid "Linked to Contribution Page"
 msgstr "Gelinkt aan donatie pagina"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "U heeft een bijdrage ontvangen op uw persoonlijke pagina."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Uw totaal van de fondsenwerving is gewijzigd."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "De informatie over de donateur(s) staat hieronder, Als u dat wilt, kunt u contact opnemen om te bedanken."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "De naam van de donateur is toegevoegd aan uw eerrol, behalve als de donateur dat niet wilde."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Er is net een bijdrage gedaan via uw persoonlijke campagnepagina"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Persoonlijke Campagnepagina Notificatie"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -761,9 +803,9 @@ msgstr "Ga naar uw pagina"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Als u uw campagnepagina bekijkt terwijl u ingelogd bent, bevat de pagina links om de pagina te bewerken, vrienden erover te informeren en uw contactinformatie bij te werken."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "Als u ingelogd bent terwijl u uw campagnepagina bekijkt, dan kunt u uw pagina wijzigen, het melden bij uw vrienden en uw contactgegevens wijzigen."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -781,8 +823,9 @@ msgstr "Vragen? Stuur een e-mail aan"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
 msgstr "Uw persoonlijke campagnepagina is beoordeeld. Er zijn een aantal vragen over de inhoud wat ons ervan heeft weerhouden om de pagina goed te keuren. Wij betreuren het eventuele ongemak."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
@@ -878,102 +921,42 @@ msgstr "Klik op deze link of plak hem in uw webbrowser en volg de instructies"
 msgid "Click or paste this link into your browser"
 msgstr "Klik op deze link of plak hem in uw webbrowser"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL voor deze pagina"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr ""
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Kopieer deze link om het direct op uw eigen website te delen!"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Als deze optie is aangevinkt, dan wordt de \"eerrol\" getoond met de namen (of roepnamen) van de mensen die je ondersteunen. (Een donor heeft de optie om anoniem te blijven.)"
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "Eigenaar e-mail notificatie"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Deze aanmelding is gedaan dankzij de inzet van <strong>%1</strong> die onze campagne steunt. "
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Deze bijdrage is gedaan dankzij de inzet van <strong>%1</strong> die onze campagne steunt. "
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "Het inlichten van de eigenaar is voor deze persoonlijke campagnepagina niet ingesteld. Neem contact op met uw beheerder als u ondersteuning nodig heeft."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Eigenaar notificatie"
+msgid "PCP Block ID"
+msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Stuur mij een e-mail wanneer iemand op mijn pagina een bijdrage doet."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Als deze optie aangevinkt is, ontvangt u per e-mail een berichtje als mensen een bijdrage doen aan uw campagne."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "U heeft een bijdrage ontvangen op uw persoonlijke pagina."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Uw totaal van de fondsenwerving is gewijzigd."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "De informatie over de donateur(s) staat hieronder, Als u dat wilt, kunt u contact opnemen om te bedanken."
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "De naam van de donateur is toegevoegd aan uw eerrol, behalve als de donateur dat niet wilde."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Er is net een bijdrage gedaan via uw persoonlijke campagnepagina"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Persoonlijke Campagnepagina Notificatie"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "Als u ingelogd bent terwijl u uw campagnepagina bekijkt, dan kunt u uw pagina wijzigen, het melden bij uw vrienden en uw contactgegevens wijzigen."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "Uw persoonlijke campagnepagina is beoordeeld. Er zijn een aantal vragen over de inhoud wat ons ervan heeft weerhouden om de pagina goed te keuren. Wij betreuren het eventuele ongemak."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr ""
